Fix text align in blogs

--- a/theme/assets/css/bundles/main.css
+++ b/theme/assets/css/bundles/main.css
@@ -9557,6 +9557,7 @@ input.ng-touched.ng-invalid, .input-validation-error {
     display: flex;
     flex-direction: column;
     flex: 1 0 auto;
+    text-align: left;
 }
 
 .blog .list--posts .list__t {
